--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #444;
   background-color: #f3f3f3;
   height: 100vh;
@@ -85,6 +85,7 @@ nav {
 
 /* MAIN */
 .app {
+  opacity: 0;
   position: relative;
   max-width: 100rem;
   margin: 4rem auto;
